--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -38,5 +38,9 @@
            { "translation_key":"open_hours.week_day7", "from":"8:00", "to": "18:00" ,"description":"sunday", "display_from":"8:00", "display_to": "18:00", "show":"true" } 
         ],
         "description": "Open hours of all branches in general"
+    },
+    "create_new_ticket": {
+        "value": "enable",
+        "description": "Enable or disable access to the Get new ticket button in the Thank you page, 'on=enable', 'off=disable' for visits created using the Mobile Ticket UI."
     }
 }
