168477572 : Add possibility to redirect "Leave the line" to other page in Mobile Ticket (on prem)

--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -41,6 +41,6 @@
     },
     "create_new_ticket": {
         "value": "enable",
-        "description": "Enable or disable access to the Get new ticket button in the Thank you page, 'on=enable', 'off=disable' for visits created using the Mobile Ticket UI."
+        "description": "Enable or disable access to create visits using the Mobile Ticket UI, 'on=enable', 'off=disable'"
     }
 }
