168715881 : Configuration option to hide or show number of waiting customers in service list

--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -21,7 +21,7 @@
     },
     "service_fetch_interval":{
         "value":"15",
-        "description": "The interval (in seconds) at which service information is refreshed periodically"
+        "description": "The interval (in seconds) at which service information is refreshed periodically, this setting is only used if the setting Show number of waiting customers are enabled"
     },
      "service_screen_timeout":{
         "value":"1",
@@ -42,5 +42,9 @@
     "create_new_ticket": {
         "value": "enable",
         "description": "Enable or disable access to create visits using the Mobile Ticket UI, 'on=enable', 'off=disable'"
+    },
+    "show_number_of_waiting_customers": {
+        "value": "enable",
+        "description": " If this setting is enabled the number of waiting customers will appear in the service list, if disabled only service names are listed."
     }
 }
