--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -29,18 +29,18 @@
     },
     "branch_open_hours":{
         "value" : [     
-           { "translation_key":"open_hours.week_day1", "from":"8:00", "to": "18:00" ,"description":"monday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
-           { "translation_key":"open_hours.week_day2", "from":"8:00", "to": "18:00" ,"description":"tuesday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
-           { "translation_key":"open_hours.week_day3", "from":"8:00", "to": "18:00" ,"description":"wednesday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
-           { "translation_key":"open_hours.week_day4", "from":"8:00", "to": "18:00" ,"description":"thursday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
-           { "translation_key":"open_hours.week_day5", "from":"8:00", "to": "18:00" ,"description":"friday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
-           { "translation_key":"open_hours.week_day6", "from":"8:00", "to": "18:00" ,"description":"saturday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
-           { "translation_key":"open_hours.week_day7", "from":"8:00", "to": "18:00" ,"description":"sunday", "display_from":"8:00", "display_to": "18:00", "show":"true" } 
+           { "translation_key":"open_hours.week_day1", "from":"8:00", "to": "19:00" ,"description":"monday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
+           { "translation_key":"open_hours.week_day2", "from":"8:00", "to": "19:00" ,"description":"tuesday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
+           { "translation_key":"open_hours.week_day3", "from":"8:00", "to": "19:00" ,"description":"wednesday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
+           { "translation_key":"open_hours.week_day4", "from":"8:00", "to": "19:00" ,"description":"thursday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
+           { "translation_key":"open_hours.week_day5", "from":"8:00", "to": "19:00" ,"description":"friday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
+           { "translation_key":"open_hours.week_day6", "from":"8:00", "to": "19:00" ,"description":"saturday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
+           { "translation_key":"open_hours.week_day7", "from":"8:00", "to": "19:00" ,"description":"sunday", "display_from":"8:00", "display_to": "18:00", "show":"true" } 
         ],
         "description": "Open hours of all branches in general"
     },
     "create_new_ticket": {
-        "value": "enable",
+        "value": "disable",
         "description": "Enable or disable access to create visits using the Mobile Ticket UI, 'on=enable', 'off=disable'"
     },
     "show_number_of_waiting_customers": {
@@ -54,10 +54,6 @@
     "appointment_early" : {
         "value":180,
         "description": " How early is the customer allowed to arrive for his appointment (in minutes)"        
-    },
-    "allowServiceTicketIfAppLate" : {
-        "value":true,
-        "description": "Go to the ticket page if the customer is allowed to take a ticket. Otherwise he will be asked to create a new appointment."
     },
     "timeFormat" : {
         "value": "HH:mm",
