--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -29,18 +29,18 @@
     },
     "branch_open_hours":{
         "value" : [     
-           { "translation_key":"open_hours.week_day1", "from":"8:00", "to": "19:00" ,"description":"monday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
+           { "translation_key":"open_hours.week_day1", "from":"8:00", "to": "23:00" ,"description":"monday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
            { "translation_key":"open_hours.week_day2", "from":"8:00", "to": "19:00" ,"description":"tuesday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
-           { "translation_key":"open_hours.week_day3", "from":"8:00", "to": "19:00" ,"description":"wednesday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
-           { "translation_key":"open_hours.week_day4", "from":"8:00", "to": "19:00" ,"description":"thursday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
-           { "translation_key":"open_hours.week_day5", "from":"8:00", "to": "19:00" ,"description":"friday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
-           { "translation_key":"open_hours.week_day6", "from":"8:00", "to": "19:00" ,"description":"saturday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
+           { "translation_key":"open_hours.week_day3", "from":"8:00", "to": "23:59" ,"description":"wednesday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
+           { "translation_key":"open_hours.week_day4", "from":"0:10", "to": "19:00" ,"description":"thursday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
+           { "translation_key":"open_hours.week_day5", "from":"8:00", "to": "23:59" ,"description":"friday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
+           { "translation_key":"open_hours.week_day6", "from":"0:05", "to": "19:00" ,"description":"saturday", "display_from":"8:00", "display_to": "18:00", "show":"true" } ,
            { "translation_key":"open_hours.week_day7", "from":"8:00", "to": "19:00" ,"description":"sunday", "display_from":"8:00", "display_to": "18:00", "show":"true" } 
         ],
         "description": "Open hours of all branches in general"
     },
     "create_new_ticket": {
-        "value": "disable",
+        "value": "enable",
         "description": "Enable or disable access to create visits using the Mobile Ticket UI, 'on=enable', 'off=disable'"
     },
     "show_number_of_waiting_customers": {
@@ -62,5 +62,21 @@
     "dateFormat" : {
         "value":"DD/MM/YYYY",
         "description": "Date format for showing the appointment date. Allowed placeholders are DD MM YY YYYY"
-    }  
+    },
+    "customer_data" : {
+        "value": "disable",
+        "description": "Enable or disable customer access to enter customoer phone number using mobile ticket UI, 'on = enbale', 'off = disable'"
+    },
+    "privacy_enable" : {
+        "value": "enable",
+        "description": "Enable or disable privacy policy when sending phone number, 'on = enbale', 'off = disable'"
+    },
+    "privacy_link" : {
+        "value": "",
+        "description": "Whether to get privacy policy information from property file or send to a link. If value is not null users will send to that link"
+    },
+    "country_code" : {
+        "value": "+94",
+        "description": "Define the country code for phone number.If value is null no country code will be added."
+    }
 }
