--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -85,5 +85,9 @@
     "country_code" : {
         "value": "",
         "description": "Define the country code for phone number. If value is null no country code will be added."
+    },
+    "queue_poll_retry" : {
+        "value": "1",
+        "description": "Define how many times should retry the queue poll request."
     }
 }
