--- a/tsconfig-aot.json
+++ b/tsconfig-aot.json
@@ -13,6 +13,10 @@
     "suppressImplicitAnyIndexErrors": true
   },
 
+  "include": [
+    "src/typings.d.ts"
+  ],
+
   "files": [
     "src/app/module.ts",
     "src/main-aot.ts"
