--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
     "express-http-proxy": "^1.6.0",
+    "fingerprintjs2": "2.0.3",
     "grunt-cli": "^1.2.0",
     "imagemin-optipng": "^5.2.1",
     "ng2-bootstrap": "^1.1.16",
     "ng2-translate": "^5.0.0",
-    "ws": "^1.1.1"
+    "rxjs": "^5.1.0",
+    "ws": "^1.1.1",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.7.3",
