--- a/node/proxy-config.json
+++ b/node/proxy-config.json
@@ -34,5 +34,9 @@
     "tls_version": {
         "value": "",
         "description": "Flag indicating TLS version of the server. Possible values are 'TLSv1_method', 'TLSv1_1_method' and 'TLSv1_2_method'. Keep empty when using the latest version. Recommended for TLS 1.2 or later."
+    },
+    "hsts_expire_time": {
+        "value": "63072000",
+        "description": "Flag indicating HSTS(HTTP Strict-Transport-Security) expire time."
     }
 }
