MOB-286 : Possibility to change the used ciphers

--- a/node/proxy-config.json
+++ b/node/proxy-config.json
@@ -38,5 +38,9 @@
     "hsts_expire_time": {
         "value": "63072000",
         "description": "Flag indicating HSTS(HTTP Strict-Transport-Security) expire time."
+    },
+    "cipher_set": {
+        "value": [],
+        "description": "Flag indicating cipher set which use in the server. Fill the value like this. ['ECDHE-RSA-AES128-SHA256', 'DHE-RSA-AES128-SHA256', 'AES128-GCM-SHA256']. Keep it empty when not going to modify."
     }
 }
