--- a/package.json
+++ b/package.json
@@ -22,20 +22,32 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "dont-sniff-mimetype": "^1.1.0",
     "express-http-proxy": "^1.6.0",
+    "express-static-gzip": "^2.0.8",
     "fingerprintjs2": "2.0.3",
+    "frameguard": "^3.1.0",
     "grunt-cli": "^1.2.0",
+    "helmet": "^4.1.1",
+    "helmet-csp": "^3.1.0",
+    "hide-powered-by": "^1.1.0",
     "imagemin-optipng": "^5.2.1",
     "ng2-bootstrap": "^1.1.16",
     "ng2-translate": "^5.0.0",
+    "ngx-countdown": "^1.0.6",
+    "nocache": "^2.1.0",
     "rxjs": "^5.1.0",
     "ws": "^1.1.1",
+    "x-xss-protection": "^2.0.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.7.3",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
