--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,10 +1,18 @@
 {
   "/MobileTicket/*": {
-    "target": "http://192.168.1.100:9090",
+    "target": "http://127.0.0.1:9090",
     "secure": true
   },
   "/geo/*": {
-    "target": "http://192.168.1.100:9090",
+    "target": "http://localhost:9090",
+    "secure": true
+  },
+  "/MTService/*": {
+    "target": "http://127.0.0.1:82",
+    "secure": true
+  },
+  "/rest/*": {
+    "target": "http://localhost:9090",
     "secure": true
   }
 }
