--- a/node/package.json
+++ b/node/package.json
@@ -15,7 +15,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js",
-    "start": "npm install && npm run server"
+    "start_": "npm install && npm run server",
+    "start": "concurrently \"cd mt-services && npm run start\" \"npm run start_\"",
+    "dev": "concurrently \"cd mt-service && npm run start\" \"npm run start\""
   },
   "repository": {
     "type": "",
