MOB-312 : Mobile Ticket works with Button scheduler

--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -31,6 +31,10 @@
     "value": "1",
     "description": "The time duration (in minutes) which the app will stay in services screen without creating a ticket"
   },
+  "branch_shedule": {
+    "value": "disable",
+    "description": "Enable or disable branch shedule. When enabled, ignore the branch_open_hours values."
+  },
   "branch_open_hours": {
     "value": [
       {
