--- a/node/package.json
+++ b/node/package.json
@@ -4,20 +4,35 @@
   "description": "Server Application for MT",
   "main": "server.js",
   "dependencies": {
+    "@types/mongoose": "^5.7.36",
+    "axios": "^0.19.0",
     "body-parser": "1.17.2",
     "compression": "1.6.2",
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "express-http-proxy": "1.6.0",
     "express-static-gzip": "2.0.6",
-    "helmet": "3.6.1"
+    "helmet": "3.6.1",
+    "mongoose": "^5.10.9",
+    "rimraf": "^3.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/express": "^4.17.8",
+    "@types/node": "^13.11.1",
+    "grunt-ts": "^6.0.0-beta.22",
+    "nodemon": "^2.0.3",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.9.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js",
-    "start_": "npm install && npm run server",
-    "start": "concurrently \"cd mt-services && npm run start\" \"npm run start_\"",
-    "dev": "concurrently \"cd mt-service && npm run start\" \"npm run start\""
+    "start": "npm run start:prod",
+    "build": "rimraf ./mt-service/**/*.js server.js && tsc",
+    "clean": "rimraf ./mt-service/**/*.js server.js",
+    "start:dev": "ts-node server.ts dev",
+    "start:prod": "npm install && npm run server",
+    "dev": "concurrently \"cd mt-services && npm run start\" \"npm run start_\""
   },
   "repository": {
     "type": "",
