--- a/package.json
+++ b/package.json
@@ -28,13 +28,10 @@
     "fingerprintjs2": "2.0.3",
     "frameguard": "^3.1.0",
     "grunt-cli": "^1.2.0",
-    "helmet": "^4.1.1",
-    "helmet-csp": "^3.1.0",
     "hide-powered-by": "^1.1.0",
     "imagemin-optipng": "^5.2.1",
     "ng2-bootstrap": "^1.1.16",
     "ng2-translate": "^5.0.0",
-    "ngx-countdown": "^1.0.6",
     "nocache": "^2.1.0",
     "rxjs": "^5.1.0",
     "ws": "^1.1.1",
@@ -75,6 +72,7 @@
     "grunt-shell": "^1.3.1",
     "grunt-ssh": "^0.12.9",
     "grunt-string-replace": "^1.3.1",
+    "grunt-ts": "^6.0.0-beta.22",
     "grunt-war": "^0.5.1",
     "grunt-zip": "0.17.1",
     "gulp": "^3.9.1",
