MOB-311: fix appointment bug

--- a/node/mt-service/src/config/config.json
+++ b/node/mt-service/src/config/config.json
@@ -1,6 +1,6 @@
 {
   "db_connection_string": {
-    "value": "mongodb://defaultDbUser:defaultDbUser@localhost/mobileticket",
+    "value": "",
     "description": "mongo database connection URL"
   },
   "tenant_id": {
