--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -4,7 +4,7 @@
     "description": "Radius to include branches within (in meters)"
   },
   "version": {
-    "value": "1.10.0",
+    "value": "1.10.0-internal",
     "description": "MobileTicket version"
   },
   "customer_feedback": {
@@ -39,8 +39,8 @@
     "value": [
       {
         "translation_key": "open_hours.week_day1",
-        "from": "5:00",
-        "to": "19:00",
+        "from": "8:00",
+        "to": "18:00",
         "description": "monday",
         "display_from": "8:00",
         "display_to": "18:00",
@@ -49,7 +49,7 @@
       {
         "translation_key": "open_hours.week_day2",
         "from": "8:00",
-        "to": "23:59",
+        "to": "18:00",
         "description": "tuesday",
         "display_from": "8:00",
         "display_to": "18:00",
@@ -57,8 +57,8 @@
       },
       {
         "translation_key": "open_hours.week_day3",
-        "from": "0:00",
-        "to": "23:59",
+        "from": "8:00",
+        "to": "18:59",
         "description": "wednesday",
         "display_from": "8:00",
         "display_to": "18:00",
@@ -66,8 +66,8 @@
       },
       {
         "translation_key": "open_hours.week_day4",
-        "from": "0:00",
-        "to": "23:00",
+        "from": "8:00",
+        "to": "18:00",
         "description": "thursday",
         "display_from": "8:00",
         "display_to": "18:00",
@@ -76,7 +76,7 @@
       {
         "translation_key": "open_hours.week_day5",
         "from": "8:00",
-        "to": "19:00",
+        "to": "18:00",
         "description": "friday",
         "display_from": "8:00",
         "display_to": "18:00",
@@ -85,7 +85,7 @@
       {
         "translation_key": "open_hours.week_day6",
         "from": "8:00",
-        "to": "19:00",
+        "to": "18:00",
         "description": "saturday",
         "display_from": "8:00",
         "display_to": "18:00",
@@ -94,7 +94,7 @@
       {
         "translation_key": "open_hours.week_day7",
         "from": "8:00",
-        "to": "23:59",
+        "to": "18:00",
         "description": "sunday",
         "display_from": "8:00",
         "display_to": "18:00",
@@ -128,7 +128,7 @@
     "description": "Date format for showing the appointment date. Allowed placeholders are DD MM YY YYYY"
   },
   "customer_data": {
-    "value": "enable",
+    "value": "disable",
     "description": "Enable or disable customer access to enter customer phone number using mobile ticket UI, 'on = enable', 'off = disable'"
   },
   "privacy_policy": {
@@ -160,7 +160,7 @@
     "description": "Enable or disable whether user allow to use/open the ticket in other devices apart from the created device. 'on = enable', 'off = disable'"
   },
   "otp_service": {
-    "value": "enable",
+    "value": "disable",
     "description": "Enable or disable OTP service"
   }
 }
