--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -6,10 +6,7 @@
     "allowJs": true,
     "outDir": "",
     "rootDir": "",
-    // "strict": true,
-    // "noImplicitAny": true,
-    // "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "exclude": ["upgrade-helper"]
+  "exclude": ["upgrade-helper","bin","sslcert"]
 }
