MOB-385: Configurable unit of distance feature added

--- a/node/proxy-config.json
+++ b/node/proxy-config.json
@@ -8,7 +8,7 @@
     "description": "Local webserver port"
   },
   "auth_token": {
-    "value": "nosecrets",
+    "value": "1234",
     "description": "Mobile API user - authentication token"
   },
   "local_webserver_ssl_port": {
@@ -16,7 +16,7 @@
     "description": "Local webserver HTTPS port"
   },
   "support_ssl": {
-    "value": "true",
+    "value": "false",
     "description": "Flag indicating server supports SSL.Should have a valid public key and certificate in 'sslcert' folder "
   },
   "gateway_has_certificate": {
