--- a/node/mt-service/src/config/config.json
+++ b/node/mt-service/src/config/config.json
@@ -1,10 +1,10 @@
 {
   "db_connection_string": {
-    "value": "mongodb+srv://chamut:chamut@cluster0.7dtrr.mongodb.net/test",
+    "value": "",
     "description": "mongo database connection URL"
   },
   "tenant_id": {
-    "value": "internal-a3de98bc",
+    "value": "1001",
     "description": "unique identifire of the client application"
   }
 }
