--- a/node/proxy-config.json
+++ b/node/proxy-config.json
@@ -8,7 +8,7 @@
     "description": "Local webserver port"
   },
   "auth_token": {
-    "value": "1234",
+    "value": "nosecrets",
     "description": "Mobile API user - authentication token"
   },
   "local_webserver_ssl_port": {
