--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -129,7 +129,7 @@
   },
   "system_of_units": {
     "value": "auto",
-    "description": "Unit of measure the distance. Can be metric, imperial, auto"
+    "description": "System of units which measures the distance to the branch. Can be metric (km or m), imperial (mi), auto (depending on the browser locale)"
   },
   "customer_data": {
     "value": "disable",
