--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobile-ticket",
-  "version": "1.10.1-internal",
+  "version": "1.10.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
