--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -4,8 +4,8 @@
     "description": "Radius to include branches within (in meters)"
   },
   "version": {
-    "value": "1.10.1-internal",
-    "description": "MobileTicket version"
+    "value": "1.10.0",
+    "description": "MobileTicket version [depricated key. version in package.json and release notes instead]"
   },
   "customer_feedback": {
     "value": "",
