--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -3,6 +3,10 @@
     "value": "2147483647",
     "description": "Radius to include branches within (in meters)"
   },
+  "appointment_arrive_radius": {
+    "value": "2147483647",
+    "description": "Radius to arrive appointmment within (in meters)"
+  },
   "version": {
     "value": "1.10.0",
     "description": "MobileTicket version [depricated key. version in package.json and release notes instead]"
