MOB-508: Prevent replay attacks in MT

--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -166,5 +166,9 @@
   "otp_service": {
     "value": "disable",
     "description": "Enable or disable OTP service"
+  },
+  "ticket_token": {
+    "value": "disable",
+    "description": "Enable or disable unique token for a ticket"
   }
 }
