MOB-512: OTP validation for multiple resend attempts by replaying the request

--- a/src/app/config/config.json
+++ b/src/app/config/config.json
@@ -167,7 +167,7 @@
     "value": "disable",
     "description": "Enable or disable OTP service"
   },
-  "ticket_token": {
+  "create_ticket_token": {
     "value": "disable",
     "description": "Enable or disable unique token for a ticket"
   }
